--- a/style.css
+++ b/style.css
@@ -23,10 +23,14 @@ header
 
 .link li {
 
-    font-size: 15px;
-    color: #8b8b8b;        
+    font-size: 15px;     
     margin: 10px;
     list-style-type: none;
+}
+.link li a
+{
+    color: #8b8b8b; 
+
 }
 .top
 {
@@ -40,11 +44,14 @@ header
 }
 
 .top li {
-    color: #7f7f7f;
     font-size: 15px;
     font-style:italic;
     margin: 10px;
     list-style-type: none;
+}
+.top li a
+{
+    color: #7f7f7f;
 }
 img
 {
@@ -87,7 +94,7 @@ width: 35%;
 {
 position: absolute;
 right: 100px;
-top: 500px;
+top: 510px;
 width: 40%;
 }
 
@@ -136,7 +143,7 @@ h6{
 .btn1
 {
     position: absolute;
-    top: 900px;
+    top: 920px;
     right: 500px;
     width: 110px;
     height: 35px;
@@ -148,7 +155,7 @@ h6{
 {
     position: absolute;
     left: 150px;
-    top: 900px;
+    top: 920px;
     width: 100px;
     height: 35px;
     background-color: #D9D9D9;
